Upgrade for 2.12.x and 2.13.x